tdf#146360 use correct data source to access object properties

For more and detailed info see comment in diff please.

Change-Id: I33d6d4fc46af7f6f854a2708e3ab932bbe6712f2
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/141886
Tested-by: Jenkins
Reviewed-by: Armin Le Grand <Armin.Le.Grand@me.com>